2010-02-18 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: search C runtime initialization object files
	  crt0.rel in system library directories

	2010-02-16 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: remove crt0.rel for z80 and gb
	* src/SDCCmain.c:
	  fixed the fist part of bug #2951083: -o not working as expected:
	  rename the linker output file name to -o binary file name
	* sdas/linksrc/lkaomf51.c:
	  fixed the second part of bug #2951083: -o not working as expected:
	  remove the file extension in any case

2010-02-16 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/peeph-gbz80.def,
	  device/include/asm/z80/features.h,
	  device/lib/gbz80/Makefile.in,
	  device/lib/gbz80/div.s,
	  device/lib/gbz80/mul.s,
	  support/regression/ports/gbz80/spec.mk:
	  Made gbz80 regression tests compile again.

2010-02-11 Borut Razem <borut.razem AT siol.net>

	* sdas/linksrc/lkmain.c: removed unneeded gb linker initialization

2010-02-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/clean.mk: also clean huge library

2010-02-10 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/gen.c: (genAssign literal) loading via accumulator if it
	  pays off. Could eventually also be enabled for assigning to registers

2010-02-09 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added rules 105.b and 114.x improving parameter
	  passing for models large and huge.
	  Regression test suite is about 1% smaller for model large

2010-02-09 Borut Razem <borut.razem AT siol.net>

	* sdas/asxxsrc/sdas.c, sdas/linksrc/sdld.c:
	  convert parogram name to lower case since on Win 9x program names
	  in argv[0] are always upper case;
	  added diagnostic if SDAS_DIAG and/or SDLD_DIAG environment
	  variables are set

2010-02-08 Borut Razem <borut.razem AT siol.net>

	* src/avr/gen.c, src/avr/gen.h, src/cdbFile.c, src/ds390/gen.c,
	  src/ds390/gen.h, src/hc08/gen.c, src/hc08/gen.h, src/mcs51/gen.c,